--- a/src/sass/layouts/_framework.scss
+++ b/src/sass/layouts/_framework.scss
@@ -54,7 +54,7 @@
 
     &:hover,
     &:focus {
-      background-color: shade-color(theme-color('info'), 15%);
+      background-color: shade-color($info, 15%);
     }
   }
 
